# langchain-chat

./: .env.example  README.md  config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml  pyproject.toml
config/: logging.yaml
docs/: Git命令与操作教学.md  architecture.md  uv包管理器教学文档.md  实施步骤计划.md  需求变更与扩展登记.md  需求说明文档.md
examples/: __init__.py
scripts/: init_db.py  test_chat_engine.py
src/: __init__.py  main.py
src/core/: __init__.py  chat_engine.py  config_manager.py  json_formatter.py  session_manager.py  user_manager.py
src/storage/: base.py  factory.py  file_backend.py  mysql_backend.py  sqlite_backend.py
src/ui/tui/: app.py  chat_view.py  widgets.py
tests/: __init__.py  conftest.py  test_integration.py  test_session_manager.py  test_storage.py  test_storage_extra.py  test_user_manager.py
